# prompt_optimization

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  voiceai.db
.github/workflows/: ci.yml
data/: failed_calls.jsonl  objective_rules.json
voice_ai_keep_gepa/dashboard/: app.py
voice_ai_keep_gepa/dashboard/templates/dashboard/: index.html
voice_ai_keep_gepa/docker/: dashboard.Dockerfile  gepa_optimizer.Dockerfile  voice_agent.Dockerfile
voice_ai_keep_gepa/gepa_optimizer/: optimizer.py  qwen_client.py  schemas.py  scoring.py  service.py  storage.py  voice_metrics_client.py
voice_ai_keep_gepa/scripts/: bootstrap.sh  demo_loop.py  init_db.py  monitor_stub.py  replay_failed_calls.py
voice_ai_keep_gepa/tests/: conftest.py
voice_ai_keep_gepa/tests/integration/gepa_optimizer/: test_service.py
voice_ai_keep_gepa/tests/integration/voice_agent/: test_repository.py
voice_ai_keep_gepa/tests/unit/dashboard/: test_dashboard.py
voice_ai_keep_gepa/tests/unit/gepa_optimizer/: test_optimizer.py  test_qwen_client.py  test_scoring.py
voice_ai_keep_gepa/tests/unit/voice_agent/: test_agent_logic.py  test_app_endpoints.py  test_metrics.py  test_simulator.py
voice_ai_keep_gepa/voice_agent/: agent.py  app.py  metrics.py  objectives.py  simulate_calls.py  storage.py
